finalize result